# SC

./: .gitignore  README.md  jules_progress.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
algoritmos911/SC/: .gitignore  README.md  requirements.txt
algoritmos911/SC/docs/: pov_design.md  vr_ar_structure.md
algoritmos911/SC/sc/: config.py  main.py  models.py
algoritmos911/SC/sc/api/: __init__.py  knowledge.py  moderation.py  (+2 more)
algoritmos911/SC/smart_contracts/: hardhat.config.js
api/: __init__.py  auth.py  endpoints.py  routes.py  transactions.py
contracts/: __init__.py  blockchain_interaction.py  erc20_templates.py  erc721_templates.py
core/: __init__.py  interfaces.py  knowledge.py  knowledge_units.py  proof_of_value.py  token.py
docs/: .gitkeep  comparison.md  core.md  dao.md  roadmap_2024_2029.md  tokenomics.md
ideas/: architecture.md  economy.md  ideas_categorized_with_tags.md  philosophy.md  security.md
logic/: __init__.py  ai_integration.py  moderation.py
quantum/: __init__.py  crypto.py  engine.py  vr_shaper.py
sc/: __init__.py  main.py  models.py
sc/api/: graph.py  knowledge.py
sc/db/: __init__.py  memory_db.py
sc/services/: __init__.py  flowshield.py  ipfs_service.py  ku_generator.py  ku_graph.py
sc_api/: README.md  __init__.py  core_connector.py  knowledge.py  main.py  tokens.py  users.py
schemas/: flow.json
scripts/: stress_test_api.py
storage/: __init__.py  cache.py  caching.py  ipfs_abstraction.py  ipfs_adapter.py
tests/api/: test_graph.py  test_knowledge_api.py
tests/services/: test_ku_generator.py
(+16 files in other folders)
